# 2048

./: engine.py  interface.py  leaderboard.json  pyproject.toml
